125 resolver errores s2y3 alquilar (#127)
* Método select corregido

* El detalle ya devuelve el nombre de la herramienta

* Implementación del detalle muestra nombre herramienta

* Corregido precio negativo

* Post arreglado (API)

* Añadido descripcion

* Corregido tema fechas, nombre, descripcion...

* post hecho al 100%

* coments quitados
